@@ -92,7 +92,7 @@ IDEAS:\n
         <body>\n
           <form id="main_form"\n
                 tal:attributes="enctype form/Form_getEnctype | enctype | nothing;\n
-                action url;\n
+                action python: \'Base_callDialogMethod\' if form.action == \'login\' else url;\n
                 method python:str(path(\'form/method | string:post\')).lower()">\n
             <fieldset id="hidden_fieldset">\n
               <!-- Hidden button as explained in http://ppewww.ph.gla.ac.uk/~flavell/www/formquestion.html -->\n
